Version 0.7.0 ( ?? 2010)
-----------------------------

 * added syntax for indented regions
 * changed rendering of unknown macros


Version 0.6.1 (March 31 2009)
-----------------------------

 * fixed recursion issue with long lists and tables (>400 rows)
 * added ``parse_args`` function for macro arg_string parsing


Version 0.6 (March 1 2009)
--------------------------

 * refactored dialects.py to make extending easier

   * added ``creole10_base`` class factory function
   * added ``creole11_base`` class factory function
   * added ``create_dialect`` factory function
   * The old ``Creole10`` class is now a factory function and
     it is depreciated. 

 * ``macro_func`` now takes a fifth positional argument, ``environ`` 
 * creole2html and text2html convenience functions now return html, not xhtml

   * ``no_wiki_monospace`` is now True for text2html

 * creole_to_xmtml convenience function removed
 * explicit url links (e.g., [[http://example.com/]]) can be multiline
 * added support for easy inline markup customization (SimpleElement)
 * changed <tt> to <code>
 * added support for blog-style line endings (blog_style_endings=True)
 * macros of the same name can nest (previously this was possible
   only for macros with unique names)
 * macros can now return Markup objects directly (Stream, Fragment,
   Element, and string (preferably unicode) objects were always okay)
 * made creoleparser smarter about adding <p> tags
 * improved rawlink detection regex

Version 0.5.1 (Dec 8 2008)
--------------------------

 * converted docs to Sphinx
 * improved rendering of unknown macros 
 * added title attribute to images
 * fixed bug with markup in raw links
 * fixed bug with unicode characters in wiki links
 * fixed bug preventing plain-text rendering
 * tests.py was refactored to use unittest (thanks duncan.mcgreggor!)
 * special characters in wiki links get quoted for urls
 * links refactored to support mailto:
 * wiki links can no longer have adjacent spaces