@@ -2,7 +2,8 @@ Version 0.7.0 ( ?? 2010)
 -----------------------------
 
  * added syntax for indented regions
- * changed rendering of unknown macros
+ * added Parser.parse() method to expose parse_tree (a Genshi Fragment object) 
+
 
 
 Version 0.6.1 (March 31 2009)
